# syrillian

./: Cargo.toml
syrillian/: Cargo.toml
syrillian/examples/: bones.rs  my-main.rs  necoarc.rs  parenting_and_object_types.rs  pbr.rs  simple_transformations.rs
syrillian/examples/dynamic_shader/: main.rs
syrillian/src/: lib.rs  math.rs
syrillian/src/engine/: world.rs
syrillian/src/engine/assets/: asset_store.rs  bind_group_layout.rs  cubemap.rs  mod.rs  render_cubemap.rs
syrillian/src/engine/assets/mesh/: mod.rs
syrillian/src/engine/assets/scene_loader/: mod.rs
syrillian/src/engine/assets/shader/: mod.rs
syrillian/src/engine/assets/shader/shaders/: line.wgsl  mod.rs  shader3d.wgsl  ssr_post_process.wgsl
syrillian/src/engine/assets/shader/shaders/debug/: lines.wgsl
syrillian/src/engine/assets/shader/shaders/groups/: basic.wgsl  post_process.wgsl  render.wgsl
syrillian/src/engine/audio/: mod.rs
syrillian/src/engine/components/: animation.rs  audio.rs  button.rs  camera.rs  camera_debug.rs  collider.rs  fp_camera.rs  fp_movement.rs  freecam.rs  gravity.rs  image.rs  joints.rs  light.rs  mesh_renderer.rs  mod.rs  panel.rs  rigid_body.rs  rotate.rs  skeletal.rs  ui_rect.rs
syrillian/src/engine/components/text/: mod.rs
syrillian/src/engine/core/: bone.rs  bounds.rs  component_context_inference.rs  component_storage.rs  mod.rs  object.rs  object_extensions.rs  transform.rs
syrillian/src/engine/core/reflection/: impl_nalgebra.rs  impl_primitive.rs  macros.rs  mod.rs  serialize_builtins.rs  serialize_primitive.rs  serialize_std.rs  serializer.rs
syrillian/src/engine/input/: input_manager.rs  mod.rs
syrillian/src/engine/physics/: mod.rs  simulator.rs
syrillian/src/engine/prefabs/: mod.rs
syrillian/src/engine/rendering/: context.rs  debug_renderer.rs  frustum.rs  light_manager.rs  lights.rs  message.rs  mod.rs  picking.rs  post_process_pass.rs  render_data.rs  renderer.rs  state.rs  texture_export.rs  uniform.rs  viewport.rs
syrillian/src/engine/rendering/cache/: asset_cache.rs  material.rs
syrillian/src/engine/rendering/cache/font/: glyph.rs
syrillian/src/engine/rendering/cache/shader/: builder.rs
syrillian/src/engine/rendering/post_process/: mod.rs  pipeline.rs  ssr.rs  ui_pass.rs
syrillian/src/engine/rendering/proxies/: debug_proxy.rs  mesh_proxy.rs  mod.rs  text_proxy.rs
syrillian/src/engine/rendering/strobe/: frame.rs  image.rs  layout.rs  line.rs  mod.rs  renderer.rs  spacing.rs  style.rs  text.rs  ui_element.rs
syrillian/src/utils/: frame_counter.rs  mod.rs  str.rs
syrillian/src/windowing/: app.rs  game_thread.rs  mod.rs  presenter.rs  state.rs
syrillian/tests/: asset_store.rs  component_parent.rs  components.rs  core_reflection.rs  reflection.rs  world.rs
syrillian_asset/: Cargo.toml
syrillian_asset/src/assets/: bind_group_layout.rs  compute_shader.rs  cubemap.rs  material.rs  mod.rs
syrillian_asset/src/assets/mesh/: mod.rs
syrillian_asset/src/assets/shader/: defaults.rs  mod.rs
syrillian_asset/src/assets/shader/shaders/: mod.rs  post_process_fxaa.wgsl  skybox.wgsl  skybox_procedural.wgsl
syrillian_asset/src/assets/shader/shaders/compute/: bloom_blur_compute.wgsl  bloom_composite_compute.wgsl  bloom_prefilter_compute.wgsl  mesh_skinning.wgsl  particle_position.wgsl  ssao_apply_compute.wgsl  ssao_blur_compute.wgsl  ssao_post_process_compute.wgsl  ssr_post_process_compute.wgsl
syrillian_asset/src/assets/shader/shaders/debug/: light.wgsl
syrillian_asset/src/store/: asset_store.rs
syrillian_components/: Cargo.toml
syrillian_components/src/: animation.rs  audio.rs  button.rs  collider.rs  extensions.rs  flashlight.rs  fp_camera.rs  fp_movement.rs  freecam.rs  gravity.rs  image.rs  joints.rs  lib.rs  light.rs  mesh_renderer.rs  panel.rs  particle_system.rs  profiler.rs  rigid_body.rs  rotate.rs  skeletal.rs  third_person_controller.rs  ui_rect.rs
syrillian_components/src/prefabs/: cube.rs  first_person_player.rs  mod.rs  sphere.rs  sun.rs  third_person_player.rs
syrillian_components/src/proxy/particle_system/: mod.rs  particle_system_render.wgsl
syrillian_components/src/text/: mod.rs
syrillian_components/tests/: joint.rs  refection.rs
syrillian_examples/: Cargo.toml
syrillian_examples/examples/: bones.rs  material_shader_instances.rs  my-main.rs  necoarc.rs  parenting_and_object_types.rs  pbr.rs  simple_transformations.rs
syrillian_examples/examples/assets/: custom_properties.glb
syrillian_examples/examples/dynamic_shader/: main.rs  shader.wgsl  shader2.wgsl  shader3.wgsl
syrillian_macros/src/: lib.rs
syrillian_render/: Cargo.toml
syrillian_render/src/cache/: asset_cache.rs  material.rs  mesh.rs  mod.rs
syrillian_render/src/cache/compute_shader/: mod.rs
syrillian_render/src/cache/shader/: mod.rs
syrillian_render/src/cache/texture/: textures.rs
syrillian_render/src/lighting/: manager.rs  proxy.rs
syrillian_render/src/passes/: pipeline.rs
syrillian_render/src/passes/post_process/: bloom.rs  finalize.rs  fxaa.rs  mod.rs  ssao.rs  ssr.rs
syrillian_render/src/proxies/: debug_proxy.rs  mesh_proxy.rs
syrillian_render/src/rendering/: message.rs  offscreen_surface.rs  render_data.rs  renderer.rs  viewport.rs
syrillian_render/src/strobe/: mod.rs  renderer.rs  slider.rs
syrillian_scene/: Cargo.toml
syrillian_scene/src/: bones.rs  gltf_loader.rs  lib.rs  meshes.rs  textures.rs  utils.rs
syrillian_scene/tests/: scene_loader.rs
syrillian_shadergen/: Cargo.toml
syrillian_shadergen/src/: chunks.rs  compiler.rs  function.rs  generator.rs  lib.rs
syrillian_shadergen/src/functions/: pbr_mesh3d.wgsl  vertex_mesh3d.wgsl
syrillian_shadergen/src/functions/helpers/: math.wgsl
syrillian_shadergen/src/groups/: light.wgsl  mesh3d.wgsl  post_process.wgsl  render.wgsl
syrillian_shadergen/tests/: material_binding.rs  math.rs  post_process.rs
syrillian_utils/: Cargo.toml
syrillian_utils/src/: bounds.rs  engine_args.rs  lib.rs  logging.rs
