#################################################
#                Workspace Meta                 #
#################################################



[workspace]
resolver = "2"
members = [
    "syrillian",
    "syrillian_components",
    "syrillian_macros", "syrillian_scene",
    "syrillian_utils"
]

[workspace.package]
version = "0.5.0"
license = "MIT"
edition = "2024"
repository = "https://github.com/Kek5chen/syrillian"
authors = ["Kek5chen"]


#################################################
#                Build Profiles                 #
#################################################



[profile.dev]
opt-level = 2

[profile.release]
opt-level = 2
codegen-units = 1
lto = "fat"
panic = "abort"

[workspace.dependencies]
syrillian = { version = "0.5.0", path = "syrillian", default-features = false }
syrillian_utils = { version = "0.5.0", path = "syrillian_utils", default-features = false }
syrillian_macros = { version = "0.5.0", path = "syrillian_macros", default-features = false }
syrillian_components = { version = "0.1.0", path = "syrillian_components", default-features = false }
syrillian_scene = { version = "0.1.0", path = "syrillian_scene", default-features = false }
