[package]
name = "syrillian"
description = "Magically simple 2D & 3D game engine built on top of wgpu"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../README.md"



#################################################
#               Simple dependencies             #
#################################################



[dependencies]
syrillian_asset.workspace = true
syrillian_macros.workspace = true
syrillian_render.workspace = true
syrillian_shadergen.workspace = true
syrillian_utils.workspace = true

wgpu.workspace = true
winit.workspace = true
glamx = { workspace = true, features = ["bytemuck", "mint", "nalgebra"] }
bytemuck.workspace = true
itertools.workspace = true
snafu.workspace = true
tracing.workspace = true
uuid.workspace = true
slotmap.workspace = true
dashmap.workspace = true
kira.workspace = true
crossbeam-channel.workspace = true
rapier3d = { version = "0.32", features = ["parallel"] }
num-traits = "0.2"
const_format = "0.2"
gilrs = "0.11"
delegate = "0.13"
web-time = "1.0"
inventory = "0.3"
parking_lot = "0.12"
profiling = "1.0"
#profiling = { version = "1.0", features = ["profile-with-puffin"] }
#puffin_http = "0.16"

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
chrono = "0.4"



#################################################
#              Complex dependencies             #
#################################################



[target.'cfg(target_os = "macos")'.dependencies]
wgpu = { workspace = true, default-features = false, features = ["metal"] }

[target.'cfg(target_os = "linux")'.dependencies]
winit = { workspace = true, features = ["wayland", "x11"] }

[target.'cfg(target_os = "windows")'.dependencies]
wgpu = { workspace = true, default-features = false, features = ["dx12"] }



[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { workspace = true, default-features = false, features = ["vulkan-portability", "vulkan"] }
tokio = { version = "1.47", features = ["rt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = ["js"] }
wgpu = { workspace = true, default-features = false, features = ["webgpu", "naga-ir", "webgl", "metal"] }
web-sys = { version = "0.3", features = ["Document", "HtmlCollection"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"



#################################################
#                   Features                    #
#################################################



[features]
default = ["derive", "audio"]
derive = ["syrillian_macros/derive_tracing_subscriber"]
audio = ["kira/cpal", "syrillian_asset/audio"]
physics_profiler = ["rapier3d/profiler"]
