[package]
name = "syrillian_asset"
description = "Asset Types and Store for the Syrillian Game Engine"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
syrillian_shadergen.workspace = true
syrillian_utils.workspace = true
wgpu.workspace = true
glamx.workspace = true
tracing.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
web-time.workspace = true
bon.workspace = true
bytemuck.workspace = true
delegate.workspace = true
snafu.workspace = true
itertools.workspace = true
static_assertions.workspace = true
naga = { workspace = true, features = ["stderr"] }
image.workspace = true
kira.workspace = true
fontdb = "0.23"
once_cell = "1.21"
obj = "0.10"

[features]
default = ["audio"]
audio = ["kira/cpal"]
