[package]
name = "syrillian_components"
description = "Built-In components for the Syrillian Game Engine"
version = "0.1.0"
license.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
syrillian.workspace = true
delegate = "0.13"
kira = { version = "0.11", default-features = false, features = ["flac", "mp3", "ogg", "wav"] }
itertools = "0.14"
web-time = "1.1"
snafu = "0.8"
num-traits = "0.2"
bytemuck = "1.24"

[dev-dependencies]
more-asserts = "0.3"

[features]
default = ["audio"]
audio = ["kira/cpal"]
