[package]
name = "syrillian_components"
description = "Built-In components for the Syrillian Game Engine"
version = "0.1.0"
license.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
syrillian.workspace = true
delegate = "0.13"
kira = { version = "0.11", default-features = false, features = ["flac", "mp3", "ogg", "wav"] }
itertools = "0.14"
snafu = "0.8"
bytemuck = "1.24"

[features]
default = ["audio"]
audio = ["kira/cpal"]
physics_profiler = ["syrillian/physics_profiler"]
