[package]
name = "syrillian_components"
description = "Built-In components for the Syrillian Game Engine"
version = "0.1.0"
license.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
syrillian.workspace = true
syrillian_utils.workspace = true
syrillian_render.workspace = true
delegate.workspace = true
itertools.workspace = true
snafu.workspace = true
bytemuck.workspace = true
web-time.workspace = true
kira.workspace = true

[features]
default = ["audio"]
audio = ["kira/cpal"]
physics_profiler = ["syrillian/physics_profiler"]
