[package]
name = "syrillian_examples"
version = "0.1.0"
license.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dev-dependencies]
syrillian = { workspace = true, features = ["derive"] }
syrillian_components.workspace = true
syrillian_scene.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossbeam-channel.workspace = true
itertools.workspace = true
web-time.workspace = true
slotmap.workspace = true
notify = "8.2"
