[package]
name = "syrillian_scene"
description = "Scene/Asset Loader for the Syrillian Game Engine"
version = "0.1.0"
license.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
syrillian.workspace = true
syrillian_components.workspace = true
gltf = { version = "1.4", features = ["KHR_materials_unlit", "KHR_lights_punctual", "KHR_materials_pbrSpecularGlossiness", "KHR_texture_transform", "extras"] }
itertools = "0.14"
snafu = "0.8"
serde_json = "1.0"
