[package]
name = "syrillian_shadergen"
description = "Material Shader Compiler and Generator for the Syrillian Game Engine"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
wgpu.workspace = true
syrillian_utils.workspace = true
glamx = { workspace = true, features = ["bytemuck"] }
uuid = { workspace = true, features = ["v4"] }
bytemuck.workspace = true