[package]
name = "syrillian_utils"
description = "Utilities used by the Syrillian game engine"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
wgpu = { version = "28.0", default-features = false }
glamx = "0.1.3"
argh = "0.1"